--- a/tidytuesday.fordjohnson.dev/about/index.qmd
+++ b/tidytuesday.fordjohnson.dev/about/index.qmd
@@ -1,5 +1,7 @@
 ---
 title: About
+description-meta: Learn more about Ford Johnson’s approach to TidyTuesday—exploring data through visualization, storytelling, and analysis. Discover past projects, techniques, and insights behind the weekly data challenges.
+include-in-header: image-data.txt
 ---
 
 [TidyTuesday](https://tidytues.day/) is a weekly data visualization and analysis challenge designed to encourage the use of R and the tidyverse. Each week, participants work with publicly available datasets to create compelling visuals, uncover insights, and improve their data wrangling and storytelling skills while sharing their work with the community.
